# mini-social-app

./: .dockerignore  .env.docker  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  test_hash.py  test_redis.py
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: bafd09621135_initial_migration.py
app/: main.py
app/api/: auth.py  comments.py  deps.py  feed.py  likes.py  posts.py  users.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  comment.py  like.py  mixins.py  post.py  user.py
app/schemas/: __init__.py  auth.py  comment.py  feed.py  like.py  post.py  user.py
app/services/: auth_service.py  comment_service.py  email_service.py  feed_service.py  like_service.py  post_service.py
app/tasks/: __init__.py  celery_app.py  cleanup_tasks.py
docker/dev/: Dockerfile
docker/test/: Dockerfile
tests/: conftest.py  test_auth.py  test_comments.py  test_feed.py  test_likes.py  test_permissions.py  test_posts.py
